--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "main": "index.js",
   "repository": "https://github.com/MatheusOliveira2/StockWallet-API",
   "license": "MIT",
+  "scripts": {
+    "sonar": "node sonar-project.js",
+    "start": "node ./dist/index.js"
+  },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "sonarqube-scanner": "^2.8.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
