--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "license": "MIT",
   "scripts": {
     "sonar": "node sonar-project.js",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "build": "yarn tsc",
+    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
     "sonarqube-scanner": "^2.8.0",
+    "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
