--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "sonar": "node sonar-project.js",
     "start": "node ./dist/index.js",
     "build": "yarn tsc",
-    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
