--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "pg": "^8.5.1",
-    "typeorm": "^0.2.30"
+    "typeorm": "^0.2.30",
+    "uuidv4": "^6.2.6"
   }
 }
