--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
